<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_username">username</string>
    <string name="nav_header_email">email</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Profile</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_assessments">Assessments</string>
    <string name="menu_my_challenges">My challenges</string>
    <string name="menu_all_challenges">All challenges</string>
    <string name="menu_slots">Slots</string>
    <string name="menu_media">Media</string>
    <string name="menu_cluster">Cluster</string>
    <string name="menu_statistics">Statistics</string>
    <string name="menu_events">Events</string>
    <string name="profile_photo_cache_path">data/data/com.example.ucode/cache/avatar.png</string>
    <string name="auth_data_cache_path">data/data/com.example.ucode/cache/auth.data</string>
    <string name="profile_token_path">data/data/com.example.ucode/cache/token.data</string>
    <string name="home_cache_path">data/data/com.example.ucode/cache/home.data</string>
    <string name="activity_cache_path">data/data/com.example.ucode/cache/activity.data</string>
    <string name="my_challenges_cache_path">data/data/com.example.ucode/cache/my_challenges.data</string>
    <string name="assessments_cache_path">data/data/com.example.ucode/cache/assessments.data</string>
    <string name="statistics_cache_path">data/data/com.example.ucode/cache/statistics.data</string>
    <string name="app_name">Ucode</string>
    <string name="title_home">Home</string>
    <string name="title_challenges">Challenges</string>
    <string name="title_media">Media</string>
    <string name="description_avatar">Avatar</string>
    <string name="loading">Loading…</string>
    <string name="fill_zero">0</string>
    <string name="none">None</string>
    <string name="progress">progress</string>
    <string name="toxic_feedbacks">toxic\nfeedbacks</string>
    <string name="ac_rate">average\ncheck rate</string>
    <string name="level">level</string>
    <string name="skills">Skills</string>
    <string name="assessments">Assessments</string>
    <string name="no_assessments">No assessments planned</string>
    <string name="activity">Activity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Enter</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_username">Invalid username</string>
    <string name="invalid_password">Password is not long enough</string>
    <string name="login_failed">"Login failed"</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
    <string name="bool_true">True</string>
    <string name="bool_false">False</string>
    <string name="presentation_mark">Presentation mark</string>
    <string name="finish">finish</string>
    <string name="give_up">give up</string>
    <string name="reflection">reflection</string>
    <string name="finish_assessment">Finish assessment</string>
    <string name="search">Search</string>
    <string name="comment">Comment</string>
    <string name="toxic">Toxic</string>
    <string name="submit">Submit</string>
    <string name="someone">Someone</string>
    <string name="report_workplace">"Report workplace"</string>
    <string name="cluster_total">Total: </string>
    <string name="cluster_free">Free: </string>
    <string name="cluster_busy">Busy: </string>
    <string name="choose_cluster">Choose cluster</string>
    <string name="statistics_username">Username</string>
    <string name="statistics_level">Level</string>
    <string name="statistics_time">Time</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>