<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="#000000"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginTop="20sp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="123sp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:srcCompat="@drawable/side_nav_bar_ucode_bg"
                android:contentDescription="@string/fill_zero" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16sp"
            android:layout_marginStart="16sp">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="35sp">
            <ImageView
                android:id="@+id/menu_profile_image"
                android:layout_width="70sp"
                android:layout_height="70sp"
                android:contentDescription="@string/nav_header_desc"
                app:srcCompat="@drawable/default_avatar" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/menu_profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:text="@string/nav_header_username"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/menu_profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/nav_email_bg"
                android:text="@string/nav_header_email"
                android:textColor="@color/profile_white_text_70" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>