<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cluster.ClusterFragment"
    android:id="@+id/cluster_main_layout">
    <LinearLayout
        android:id="@+id/cluster_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:paddingVertical="6dp"
        android:paddingHorizontal="10dp"
        android:background="@color/grey_5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/profile_black_text_80"
                android:textSize="18sp"
                android:text="@string/cluster_total"/>
            <TextView
                android:id="@+id/cluster_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/profile_black_text_80"
                android:textStyle="bold"
                android:text="@string/fill_zero"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/profile_black_text_80"
                android:textSize="18sp"
                android:text="@string/cluster_free"/>
            <TextView
                android:id="@+id/cluster_free"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/profile_black_text_80"
                android:textStyle="bold"
                android:text="@string/fill_zero"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/profile_black_text_80"
                android:textSize="18sp"
                android:text="@string/cluster_busy"/>
            <TextView
                android:id="@+id/cluster_busy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/profile_black_text_80"
                android:textStyle="bold"
                android:text="@string/fill_zero"
                android:layout_weight="1"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_20"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="4dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/profile_black_text_80"
                android:text="@string/choose_cluster"/>
            <Spinner
                android:id="@+id/cluster_cluster_name_spinner"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/cluster_header"
        android:layout_height="1dp"
        android:background="@color/grey_20"/>

    <com.otaliastudios.zoom.ZoomLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/cluster_header"
        app:layout_constraintStart_toStartOf="parent"
        android:scrollbars="vertical|horizontal"
        app:animationDuration="150"
        app:maxZoom="3.5"
        app:maxZoomType="zoom"
        app:transformation="centerInside"
        app:transformationGravity="auto"
        app:hasClickableChildren="true">
        <TableLayout
            android:id="@+id/cluster_table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TableRow
                tools:ignore="UselessParent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp">
                <LinearLayout
                    tools:ignore="UseCompoundDrawables"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginHorizontal="5dp"
                        android:src="@drawable/mac"
                        android:contentDescription="@string/fill_zero" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-8dp"
                        android:background="@color/profile_white_text_80"
                        tools:ignore="SmallSp"
                        android:textSize="8sp"
                        android:text="@string/fill_zero" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
    </com.otaliastudios.zoom.ZoomLayout>
</androidx.constraintlayout.widget.ConstraintLayout>