<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.statistics.StatisticsFragment"
    android:id="@+id/statistics_main_layout">
    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/statistics_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ScrollView
            android:id="@+id/statistics_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/statistics_header"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="0dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@color/grey_5">
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="60dp"
                        android:background="@color/grey_10"/>
                    <LinearLayout
                        tools:ignore="UseCompoundDrawables"
                        android:id="@+id/statistics_sort_by_username"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="-2dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/statistics_sort_by_username_arrow"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_arrow_drop_down_24"
                            android:contentDescription="@string/fill_zero" />
                        <TextView
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:textSize="16sp"
                            android:text="@string/statistics_username"/>
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey_10"/>
                    <LinearLayout
                        tools:ignore="UseCompoundDrawables"
                        android:id="@+id/statistics_sort_by_level"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="-2dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/statistics_sort_by_level_arrow"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_arrow_drop_down_24"
                            android:contentDescription="@string/fill_zero" />
                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:textSize="16sp"
                            android:text="@string/statistics_level"/>
                    </LinearLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey_10"/>
                    <LinearLayout
                        tools:ignore="UseCompoundDrawables"
                        android:id="@+id/statistics_sort_by_spent_time"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="-1dp"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">
                        <ImageView
                            android:id="@+id/statistics_sort_by_spent_time_arrow"
                            android:layout_width="20dp"
                            android:layout_height="wrap_content"
                            android:src="@drawable/ic_baseline_arrow_drop_down_24"
                            android:contentDescription="@string/fill_zero" />
                        <TextView
                            android:layout_width="60dp"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:textSize="16sp"
                            android:text="@string/statistics_time"/>
                    </LinearLayout>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/grey_10"/>
                <LinearLayout
                    android:id="@+id/statistics_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        tools:ignore="UselessParent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="10dp"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">
                        <androidx.cardview.widget.CardView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            app:cardCornerRadius="25dp"
                            android:layout_gravity="center">
                            <ImageView
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:src="@drawable/default_avatar"
                                android:contentDescription="@string/fill_zero"/>
                        </androidx.cardview.widget.CardView>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:layout_marginStart="10dp">
                            <TextView
                                android:layout_width="120dp"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textStyle="bold"
                                android:text="@string/fill_zero"/>
                            <TextView
                                android:layout_width="80dp"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:text="@string/fill_zero"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:textAlignment="center"
                                android:text="@string/fill_zero"/>
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>